--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,26 +1,16 @@
 <div>
     <table>
-        <tr>
-            <td><button type="button" class="cell" id="cell0-0"> </button></td>
-            <td><button type="button" class="cell" id="cell0-1"> </button></td>
-            <td><button type="button" class="cell" id="cell0-2"> </button></td>
-        </tr>
-        <tr>
-            <td><button type="button" class="cell" id="cell1-0"> </button></td>
-            <td><button type="button" class="cell" id="cell1-1"> </button></td>
-            <td><button type="button" class="cell" id="cell1-2"> </button></td>
-        </tr>
-        <tr>
-            <td><button type="button" class="cell" id="cell2-0"> </button></td>
-            <td><button type="button" class="cell" id="cell2-1"> </button></td>
-            <td><button type="button" class="cell" id="cell2-2"> </button></td>
+        <tr *ngFor="let row of myBoard; let i = index">
+            <td *ngFor="let cell of row; let j = index">
+                <app-cell [symbol]="cell.symbol" [disabled]=" !myTurn || !cell.available" (clicked)="onCellClicked(i, j)"></app-cell>
+            </td>
         </tr>
     </table>
     <p>
-        It's player <span>{{ players[turn] }}</span>'s (<span>{{ turn }}</span>) turn
+        It's player <span>{{ players[theTurn] }}</span>'s (<span>{{ theTurn }}</span>) turn
     </p>
     <p>
-        <button type="button" (click)="send()">Send</button>
+        <button type="button" (click)="send()" [disabled]="!myTurn">Send</button>
         <button type="button" (click)="reset()">Reset</button>
         <button type="button" (click)="synchronize()">Sync</button>
     </p>
