--- a/src/app/board/cell/cell.component.html
+++ b/src/app/board/cell/cell.component.html
@@ -1,1 +1,1 @@
-<button type="button" class="cell" [disabled]="disabled" (click)="cellClicked()">{{ symbol }}</button>
+<button type="button" class="cell" [disabled]="disabled" (click)="cellClicked()" [attr.data-content]="symbol">{{ symbol }}</button>
