--- a/src/app/board/cell/cell.component.css
+++ b/src/app/board/cell/cell.component.css
@@ -5,5 +5,18 @@
     font-size: 50px;
     text-align: center;
     border: none;
+    background-color: white;
+}
+
+.cell:disabled {
+    background-color: #ccc;
+}
+
+.cell:disabled[data-content='x'] {
+    color: blue;
+}
+
+.cell:disabled[data-content='o'] {
+    color: red;
 }
 
